deploy/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: showroom-soundcheck
  labels:
    app.kubernetes.io/part-of: showroom-soundcheck
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
