deploy/app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showroom-soundcheck-app
  namespace: showroom-soundcheck
  labels:
    app.kubernetes.io/name: showroom-soundcheck-app
    app.kubernetes.io/version: v1.4.2
    app.kubernetes.io/part-of: showroom-soundcheck
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: showroom-soundcheck-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: showroom-soundcheck-app
        app.kubernetes.io/version: v1.4.2
        app.kubernetes.io/part-of: showroom-soundcheck
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: app
          image: quay.io/rhpds/showroom-soundcheck-backend:v1.4.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          volumeMounts:
            - name: babylon-kubeconfigs
              mountPath: /secrets
              readOnly: true
          startupProbe:
            httpGet:
              path: /api/health
              port: http
            failureThreshold: 30
            periodSeconds: 2
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/ping
              port: http
            periodSeconds: 15
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              memory: 1Gi
      volumes:
        - name: babylon-kubeconfigs
          secret:
            secretName: babylon-kubeconfigs
