deploy/app-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: showroom-soundcheck-app
  namespace: showroom-soundcheck
  labels:
    app.kubernetes.io/name: showroom-soundcheck-app
    app.kubernetes.io/part-of: showroom-soundcheck
    app.kubernetes.io/component: web
spec:
  selector:
    app.kubernetes.io/name: showroom-soundcheck-app
  ports:
    - name: frontend
      port: 3000
      targetPort: 3000
    - name: backend
      port: 8000
      targetPort: 8000
