deploy/oauth-proxy-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: oauth-proxy-service
  namespace: showroom-soundcheck
  labels:
    app.kubernetes.io/name: oauth-proxy
    app.kubernetes.io/part-of: showroom-soundcheck
    app.kubernetes.io/component: oauth-proxy
spec:
  selector:
    app.kubernetes.io/name: oauth-proxy
  ports:
    - name: http
      port: 4180
      targetPort: 4180
