deploy/postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: showroom-soundcheck
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: showroom-soundcheck
    app.kubernetes.io/component: database
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: postgres
  ports:
    - name: postgresql
      port: 5432
      targetPort: 5432
