deploy/app-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: showroom-soundcheck
  namespace: showroom-soundcheck
  labels:
    app.kubernetes.io/name: showroom-soundcheck-app
    app.kubernetes.io/part-of: showroom-soundcheck
    app.kubernetes.io/component: web
  annotations:
    haproxy.router.openshift.io/timeout: 3600s
spec:
  host: showroom-soundcheck-dev.apps.ocpv-infra01.dal12.infra.demo.redhat.com
  to:
    kind: Service
    name: oauth-proxy-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
